@@ -2,6 +2,7 @@ Revision history for perl distribution Mojo-Redis
 
 3.04 Not Released
  - Add server commands #4
+ - Add stream commands #6
  - Add support for keyspace notifications #10
  - Documented how pipelining works #7
 
